# website

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/frontend/: base.html
src/frontend/assets/js/: navbar.js
src/frontend/assets/style/: mobile.css  style.css
src/frontend/resources/: posting-guidelines.md
src/utils/: utils.cpp  utils.h
src/webserver/: webserver.cpp  webserver.h
